# ohu

./: .gitignore  CLAUDE.md  Makefile  README.md  justfile  ohu.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  techs-specs.md
.github/workflows/: ci.yml
agents/: .env.example  docs-x402.md  package.json  tsconfig.json
agents/src/: index.ts
agents/src/agregador/: batching.ts  demand-normalizer.ts  fixtures.ts  gemini.ts  index.ts  rfq.ts  types.ts
agents/src/autorizador/: index.ts
agents/src/casper/: env.ts  errors.ts  keys.ts  vault-client.ts
agents/src/mcp/: server.ts
agents/src/mutual/: index.ts
agents/src/redteam/: attack-client.ts  index.ts
agents/src/swarm/: log.ts
agents/src/tesoreria/: index.ts
agents/src/x402/: client.ts  config.ts  constants.ts  cspr-cloud.ts  pay.ts  (+9 more)
agents/test/: agregador.test.ts  errors.test.ts  lote-status.test.ts  mutual-source.test.ts  reputation-source.test.ts  role-separation.test.ts  smoke.test.ts  swarm-log.test.ts  vault-client.test.ts  x402-402-shape.test.ts  x402-fail-closed-config.test.ts  x402-failover-facilitator.test.ts  x402-fixtures.ts  x402-non-escrow-invariant.test.ts  x402-paid-flow.test.ts
contracts/: Cargo.toml  Odra.toml  build.rs
contracts/src/: attestation.rs  lib.rs  mutual_pool.rs  ohu_vault.rs  placeholder.rs
docs/: ESTADO.md
docs/internal/: model-bench.md
docs/plan/: _wrapper.md  fase-0-derisk.md  model-routing.md  semana-1.md  semana-2.md
docs/tips/: agy-cli.md  orchestration-workflow.md
infra/: .env.example
infra/deployments/: testnet.md
infra/scripts/: deploy.sh  deploy_testnet.sh  setup_admin_account.sh  simulate-week.sh
web/: attest.html  dashboard.html  index.html  node_modules  onboarding.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: attest.ts  data.ts  env.d.ts  index.ts  landing.ts  main.ts  onboarding.ts  styles.css  ui.ts
web/test/: attest.test.ts  smoke.test.ts
