[package]
name = "ohu-contracts"
version = "0.1.0"
edition = "2021"
authors = ["Ohu Cooperative <TODO>"]
license = "MIT"
description = "Ohu smart contracts (Odra/Casper)"
repository = "https://github.com/casper-agentic/ohu"

[dependencies]
odra = { version = "2.8.2", default-features = false }
odra-casper-livenet-env = { version = "2.8.2", optional = true }

[features]
default = []
livenet = ["odra-casper-livenet-env"]

[dev-dependencies]
odra-test = { version = "2.8.2", default-features = false }

[build-dependencies]
odra-build = { version = "2.8.2", default-features = false }

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3

[[bin]]
name = "ohu_contracts_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "ohu_contracts_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "ohu_livenet_deploy"
path = "bin/livenet_deploy.rs"
required-features = ["livenet"]
test = false

[[bin]]
name = "ohu_livenet_e2e"
path = "bin/livenet_e2e.rs"
required-features = ["livenet"]
test = false
